feat(auto-scheduling): eligibility scoring, recommend API, secrets hygiene
Backend
- Add StaffShiftTypeEligibility (centralized CORE/ALL eligible specialties)
  and integrate into ScheduleQualityScorer so fairness CV excludes staff
  who can never take a shift (Duoc si/KTV no longer dragged into L01/L02
  variance).
- Add POST /api/v1/auto-schedule/auto-gen-config/recommend which computes
  an AutoGenConfig recommendation from requirements, leaves and
  compensation days; surfaces rationale + totalShiftsExpected for the
  Algorithm Config UI.
- AutoSchedulingService refactors: extract L01 detection / comp-day
  caching helpers from runGeneticAlgorithm and runCsp; align key formats
  (will be unified in follow-up); clean thread-local cleanup.
- application.properties: remove hardcoded Gmail credentials (App
  Password); require environment override via MAIL_HOST / MAIL_USERNAME /
  MAIL_PASSWORD. Remove stray token accidentally appended to last line.
- AutoGenConfig: add l01/l02/l03/l04 allowed-specialty lists so
  cross-specialty mix is tunable per shift type.
- GeneticAlgorithmConfig: simplify weight record (equityWeight default
  reset to match Scoring defaults).
- JacksonConfig: explicit injection with documented intent.
- New unit tests: GeneticAlgorithmSchedulerTest (GA contract) and
  StaffShiftTypeEligibilityTest (eligibility matrix). Existing tests
  updated to reflect rename / signature changes.

Frontend
- Algorithm Config page: AutoCalculateDialog wired to the recommend
  endpoint with rationale preview, total shifts expected, and a
  "Tu dong tinh" button.
- L04CrossSpecialtyCard + RuntimeConfigEditor expanded for the new
  allowed-specialty fields.
- WorkloadChart + AutoSchedulePanel hook into the new config fields.
- api-client / useAutoSchedule / types: added recommend request /
  response types and hook.